--- a/src/s2-homeworks/hw03/Greeting.module.css
+++ b/src/s2-homeworks/hw03/Greeting.module.css
@@ -2,21 +2,41 @@
 }
 
 .inputAndButtonContainer {
+    display: flex;
+
 }
 
 .error {
+    color: red;
 }
 
 .input {
+    Width: 372px;
+    Height: 36px;
+    border-color: #D1D1D1;
+    border-radius: 5px;
+    margin-top: 9px;
+    margin-bottom: 9px;
 }
 
 .input:focus {
 }
 
 .errorInput {
+    Width: 372px;
+    Height: 36px;
+    color: #ff0000;
+    border-radius: 5px;
 }
 
 .button {
+    background-color: rgb(0, 102, 204);
+    Width: 78px;
+    Height: 36px;
+    margin-left: 12px;
+    border-radius: 5px;
+    color: #fff;
+    font-size: 14px;
 }
 
 .button:focus {
@@ -26,9 +46,13 @@
 }
 
 .button:disabled {
+    opacity: 0.5;
 }
 
 .text {
+    font-size: 14px;
+    font-weight: 600;
+    color: #D1D1D1;
 }
 
 .greeting {
