--- a/src/s2-homeworks/hw01/friend-message/FriendMessage.module.css
+++ b/src/s2-homeworks/hw01/friend-message/FriendMessage.module.css
@@ -1,25 +1,48 @@
 .friendMessage {
+    padding-left: 100px;
+    width: 1280px;
+    display: flex;
+    flex-direction: column;
+    align-items: start;
 
 }
 
 .friendImageAndText {
-
+    display: flex;
 }
 
 .friendImageAndText img {
-
+    width: 48px;
+    height: 48px;
 }
 
 .friendText {
-
+    position: relative;
+    padding: 15px;
+    background-color: #F5F7FB;
+    max-width: 530px;
+    min-height: 60px;
+    height: 100%;
+    width: 100%;
+    -moz-border-radius: 10px 10px 10px 0;
+    -webkit-border-radius: 10px 10px 10px 0;
+    border-radius: 10px 10px 10px 0;
 }
 
 .friendText:after {
-
+    content: "";
+    position: absolute;
+    right: 99%;
+    top: 86.5%;
+    width: 0;
+    height: 0;
+    border-top: 9px solid transparent;
+    border-right: 17px solid #F5F7FB;
+    border-bottom: 0 solid transparent;
 }
 
 .friendName {
-
+    font-weight: bold;
 }
 
 .friendMessageText {
