--- a/src/s2-homeworks/hw01/message-sender/MessageSender.module.css
+++ b/src/s2-homeworks/hw01/message-sender/MessageSender.module.css
@@ -1,18 +1,37 @@
 .sendForm {
-
+    margin-top: 75px;
+    max-width: 1280px;
+    display: flex;
+    justify-content: space-around;
 }
 
 .textarea {
-
+    padding: 12px 24px;
+    min-height: 40px;
+    resize: none;
+    max-width: 80%;
+    width: 970px;
+    flex-shrink: 0;
+    border-radius: 20px;
+    background: #F5F7FB;
+    box-shadow: 0 1px 2px 0 rgba(29, 33, 38, 0.10), 0 5px 20px 0 rgba(29, 33, 38, 0.03);
+    overflow: hidden;
 }
 
 .button {
-
+    box-sizing: border-box;
+    width: 120px;
+    height: 40px;
+    flex-shrink: 0;
+    border-radius: 20px;
+    background: #06C;
+    color: #FFFFFF;
 }
 
 .button:hover {
 
 }
+
 .button:active {
 
 }
