--- a/src/s2-homeworks/hw01/message/Message.module.css
+++ b/src/s2-homeworks/hw01/message/Message.module.css
@@ -1,29 +1,58 @@
 .message {
+    margin-bottom: 55px;
+    width: 1280px;
+    display: flex;
+    flex-direction: column;
+    align-items: end;
 
 }
 
 .imageAndText {
-
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: flex-start;
 }
 
 .imageAndText img {
-
+    width: 48px;
+    height: 48px;
 }
 
 .text {
-
+    position: relative;
+    padding: 15px;
+    background-color: #06C;
+    color: #FFFFFF;
+    max-width: 530px;
+    min-height: 60px;
+    height: 100%;
+    width: 100%;
+    -moz-border-radius: 10px 0 10px 0;
+    -webkit-border-radius: 10px 0 10px 0;
+    border-radius: 10px 10px 0 10px;
 }
 
-.text:after {
 
+.text:after {
+    content: "";
+    position: absolute;
+    left: 99%;
+    top: 86.5%;
+    width: 0;
+    height: 0;
+    border-top: 9px solid transparent;
+    border-left: 17px solid #0066CC;
+    border-bottom: 0 solid transparent;
 }
 
 .name {
-
+    font-weight: bold;
 }
 
 .messageText {
-
+    max-width: 530px;
+    text-wrap: normal;
+    word-wrap: break-word;
 }
 
 .time {
