--- a/src/s2-homeworks/hw04/common/c2-SuperButton/SuperButton.module.css
+++ b/src/s2-homeworks/hw04/common/c2-SuperButton/SuperButton.module.css
@@ -1,35 +1,59 @@
 .button {
+
+    max-width: 150px;
+    max-height: 30px;
+    border-radius: 2px;
+    border: none;
+    padding: 0 10px 0 10px;
+
 }
 
 .disabled {
+    background-color: #004D99;
+    color: #8c9ba8;
 }
 
 .secondary {
+
+    border: 1px solid #0066CC;
+    background-color: #fff;
+    color: #0066CC;
 }
 
 .default {
+
+    background-color: #0066CC;
+    color: #FFFFFF;
 }
 
 .red {
+    background-color: #CC1439;
+    color: #FFFFFF;
 }
 
 .default:hover {
+    background-color: #0080FF
 }
 
 .red:hover {
+    background-color: #FF1A47;
 }
 
 .secondary:hover {
+    background-color: #E5F0FA;
 }
 
 
 .default:active {
+    background-color: #0059B2;
 }
 
 .secondary:active {
+    background-color: #B21232;
 }
 
 .red:active {
+    background-color: #C9E5FF;
 }
 
 .button:disabled {
